[package]
name = "RPS"
version = "0.1.0"
authors = ["dallyshalla <dallyshalla@gmail.com>"]

[lib]
name = "rpslib"

[[bin]]
name = "main"
path = "examples/main.rs"

[[bin]]
name = "random_game"
path = "examples/randomgame.rs"

[dependencies]
rustc-serialize = "*"
rand = "*"
sodiumoxide = "*"
t_bang = "0.1.2"

[[example]]
name = "wip"
path = "examples/wip.rs"
